fix the problems by setting final variables and suppress infinte loop